labs-work/k8s/deployment-go.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-info-service-go
  labels:
    app: devops-info-service-go
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devops-info-service-go
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: devops-info-service-go
        version: v1
    spec:
      containers:
        - name: devops-info-service-go
          image: mashfeii/devops-info-service-go:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "50m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
            timeoutSeconds: 2
            failureThreshold: 3
