labs-work/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-info-service
  labels:
    app: devops-info-service
    version: v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devops-info-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: devops-info-service
        version: v1
    spec:
      containers:
        - name: devops-info-service
          image: mashfeii/devops-info-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5173
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /health
              port: 5173
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 5173
            initialDelaySeconds: 5
            periodSeconds: 3
            timeoutSeconds: 2
            failureThreshold: 3
