labs-work/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-info-service
  labels:
    app: devops-info-service
spec:
  type: NodePort
  selector:
    app: devops-info-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
